feat: cree toda la conexión a la bbdd, leyendo el .env y cree la primera migración

--- a/MasExpenseSystem/appsettings.json
+++ b/MasExpenseSystem/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlString": "Data Source={SQLSERVER};Database={DBNAME};User Id={DBUSER};Password={DBPASSWORD};TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
